--- a/css-study/11. flex-box/9. align-self.html
+++ b/css-study/11. flex-box/9. align-self.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
     <style>
       .container {
         width: 700px;
@@ -12,11 +11,12 @@
         border: 4px solid #000;
         display: flex;
         flex-flow: row wrap;
-        align-content: center;
+        align-items: center;
       }
+
       .item {
         width: 150px;
-        height: 150px;
+        height: 100px;
         background: red;
         border: 4px dashed orange;
         border-radius: 10px;
@@ -26,11 +26,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="item">A</div>
-      <div class="item">B</div>
-      <div class="item">C</div>
-      <div class="item">D</div>
-      <div class="item">E</div>
+      <div class="item item1">1</div>
+      <div class="item item2">2</div>
+      <div class="item item3">3</div>
+      <div class="item item4">4</div>
+      <div class="item item5">5</div>
+      <div class="item item6">6</div>
+      <div class="item item7">7</div>
+      <div class="item item8">8</div>
     </div>
   </body>
 </html>
