--- a/css-study/11. flex-box/7. flex-grow.html
+++ b/css-study/11. flex-box/7. flex-grow.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <style>
       .container {
         width: 800px;
         height: 400px;
-        border: 4px solid black;
+        border: 4px solid #000;
         display: flex;
         flex-flow: row wrap;
         align-items: center;
       }
 
       .item {
-        /* width: 100px; */
+        width: 100px;
         height: 100px;
         background: red;
         border: 4px dashed orange;
