--- a/css-study/11. flex-box/8. flex-shrink.html
+++ b/css-study/11. flex-box/8. flex-shrink.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <style>
       .container {
-        width: 800px;
+        width: 300px;
         height: 400px;
-        border: 4px solid black;
+        border: 4px solid #000;
         display: flex;
-        justify-self: center;
+        justify-content: center;
         align-items: center;
       }
 
@@ -32,13 +33,13 @@
        저 100px의 크기를 flex-shrink 속성으로 부여한 값만큼 비율적으로 줄어들게 됩니다.
        flex-shrink: 3 -> 100/4 * 3 = 75px만큼 줄어들어야 함.
        flex-shrink: 1 -> 100/4 * 1 = 25px만큼 줄어들어야 함.
-       */
+        */
 
       .item1 {
         /* flex-shrink: 1; */
 
-        /* flew: grow shrink */
-        flex: 1 1;
+        /* flex: grow shrink */
+        flex: 1;
       }
 
       .item2 {
