--- a/css-study/12. 사이트클론/index.html
+++ b/css-study/12. 사이트클론/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="stylesheet" href="./main.css" />
+
+    <!-- font awesome download js code -->
+    <script
+      src="https://kit.fontawesome.com/861e945404.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="wrap">
